css/style.css
body {
  font-family: "Overpass", sans-serif;
}

/* Header Section Styles */

.headerWrapper {
  display: flex;
  justify-content: space-between;
  padding: 1rem 5rem;
  font-weight: bold;
}

.left li {
  display: inline;
  margin-right: 30px;
}

.right li {
  display: inline;
  margin-right: 20px;
}

/*Hero Section styles */

.hero {
  height: 100vh;
}

.heroWrapper {
  height: 100%;
  background-image: url("/Assets/Kitchen_3.png");
  background-repeat: no-repeat;
  background-position: top;
  display: flex;
  padding: 13rem 6rem;
}

.heroText {
  margin-bottom: 9.5rem;
  font-family: "Times New Roman", Times, serif;
  color: #fffafa;
}

.heroText h1 {
  font-size: 3.5rem;
  margin-bottom: 1rem;
}

.heroText p {
  font-size: 1rem;
  line-height: 1.5;
  margin-bottom: 30px;
  font-family: "Overpass", sans-serif;
}

.heroText a {
  padding: 0.8rem 2.8rem;
  background-color: #fffafa;
  border-radius: 5px;
  text-decoration: none;
  color: #004a4c;
  font-family: "Overpass", sans-serif;
  font-size: 0.8rem;
  font-weight: bold;
  text-transform: uppercase;
}

/* About section styles */

.about {
  width: 100%;
  height: 100vh;
  line-height: 2;
  background-image: url("/Assets/Biom fn .23@2x.png");
  background-repeat: no-repeat;
  background-size: 135%;
  background-position-y: 40%;
  background-position-x: 20%;
  display: flex;
  justify-content: end;
}

.aboutText {
  padding: 9.4rem 4rem;
}

.aboutText h5 {
  font-size: 1rem;
}

.aboutText h2 {
  font-size: 2.25rem;
}

.aboutText p {
  font-size: 1.125rem;
}

.about img {
  width: 100%;
}

.aboutText ul {
  margin-bottom: 60px;
}

.aboutText ul li img {
  height: 66px;
  width: 69px;
}

.aboutText a {
  padding: 1.1rem 2.9rem;
  background-color: #004a4c;
  border-radius: 5px;
  text-decoration: none;
  color: #fffafa;
  font-family: "Overpass", sans-serif;
  font-size: 0.7rem;
  font-weight: bold;
  text-transform: uppercase;
}

